metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/Platinum_Service_Delivery__c.object-meta.xml
<CustomObject>
    <description>LABMDA-60084 Object to create and track platinum services offered to our platinum customer</description>
    <label>Platinum Service Delivery</label>
    <nameField>
        <label>Platinum Service Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platinum Service Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>