metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-60084 Lookup to account object to related platinum service delivery</description>
    <inlineHelpText>Parent account record related to this Platinum Service delivery record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Platinum Service Deliveries</relationshipLabel>
    <relationshipName>Platinum_Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>