metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Account_Platinum_Services_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Account_Platinum_Services_Delivered__c</fullName>
    <formula>/*IF(Opportunity__r.Platinum_Service_Delivered__c &gt; 0, 1,0) */

Account__r.Account_Platinum_Services_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - Platinum Services Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>