metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>LAMBDA-60084 contract end date based on the renewal date and the opportunity term</description>
    <formula>Opportunity__r.Term_End_Date__c</formula>
    <inlineHelpText>Contract end date of the opportunity</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>