metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>LAMBDA-60084 Start date of the renewal related to this platinum service</description>
    <formula>Opportunity__r.Renewal_Date__c</formula>
    <inlineHelpText>Start date of the renewal for the platinum service</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>