metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>LAMBDA-60084 the field to capture the date product was delivered</description>
    <inlineHelpText>Set the date on which the platinum service was delivered</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>