metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>LAMBDA-60084 Platinum service delivery status to be captured on successful delivery of related platinum service</description>
    <inlineHelpText>Platinum Service delivery status for this service</inlineHelpText>
    <label>Delivery Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Delivered</fullName>
                <default>true</default>
                <label>Not Delivered</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>