metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Is_Contract_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Active__c</fullName>
    <description>LAMBDA-60085 Formula to calculate whether the Contract is active or not</description>
    <formula>(TODAY()&lt;= Contract_End_Date__c)</formula>
    <inlineHelpText>The field is checked if the contract is active based on Renewal Date and term</inlineHelpText>
    <label>Is Contract Active</label>
    <type>Checkbox</type>
</CustomField>