metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>LAMBDA-60084 Opportunity field to capture opportunity related to the platinum service delivery record</description>
    <inlineHelpText>Opportunity related to the platinum service delivery</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Platinum Service Deliveries</relationshipLabel>
    <relationshipName>Platinum_Service_Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>