metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Platinum_Offer_Item__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Offer_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-60084 the field capture platinum offer item record related to the Platinum Service delivery</description>
    <inlineHelpText>Platinum Offer item related to platinum service delivery record</inlineHelpText>
    <label>Platinum Offer Item</label>
    <referenceTo>Platinum_Offer_Item__c</referenceTo>
    <relationshipLabel>Platinum Service Deliveries</relationshipLabel>
    <relationshipName>Platinum_Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>