metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Platinum Service Deliveries</relationshipLabel>
    <relationshipName>Platinum_Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>