metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>LAMBDA-60084 product family of the offer item</description>
    <formula>TEXT(Platinum_Offer_Item__r.Product_Family__c)</formula>
    <inlineHelpText>Product Family of the offer item</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>