metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/fields/Proof_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Work__c</fullName>
    <inlineHelpText>Add a link to a document, call recording, or any other artifact resulting from the delivery of this Platinum service to the customer that validates that the service has been delivered.</inlineHelpText>
    <label>Proof of Work</label>
    <type>TextArea</type>
</CustomField>