metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/validationRules/Prevent_Future_Delivery_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Future_Delivery_Date</fullName>
    <active>true</active>
    <description>LAMBDA-63164 : Prevent Future Date Selection when marking services &apos;Delivered&apos;</description>
    <errorConditionFormula>AND(Delivery_Date__c &gt; TODAY() ,
ISPICKVAL(Delivery_Status__c,&quot;Delivered&quot;))</errorConditionFormula>
    <errorDisplayField>Delivery_Date__c</errorDisplayField>
    <errorMessage>Delivery Date cannot be a Future Date</errorMessage>
</ValidationRule>