metadata/sf-prod/force-app/main/default/objects/Platinum_Service_Delivery__c/validationRules/Proof_of_Work_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Proof_of_Work_is_Required</fullName>
    <active>true</active>
    <description>LAMBDA-62078 proof of work is required field for platinum service delivery</description>
    <errorConditionFormula>AND(ISBLANK(Proof_of_Work__c ), NOT( ISNEW() ),  IsPickval(Delivery_Status__c,&apos;Delivered&apos;))</errorConditionFormula>
    <errorDisplayField>Proof_of_Work__c</errorDisplayField>
    <errorMessage>Fill Proof of Work field with evidence of service delivery</errorMessage>
</ValidationRule>